feat: add expenses controller
- make specs adhere to strict schema validation
