# swagger/v1/swagger.yaml
@@ -415,6 +415,139 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/resource_not_found_error"
+  "/expenses":
+    post:
+      summary: Creates a new expense
+      tags:
+      - Expenses
+      parameters: []
+      security:
+      - bearer_auth: []
+      responses:
+        '201':
+          description: expense transaction created
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/expense_transaction"
+        '422':
+          description: failed to create expense transaction
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    errors:
+                      category_id:
+                      - can't be blank
+              schema:
+                "$ref": "#/components/schemas/resource_creation_error"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/create_expense_params"
+            examples:
+              example:
+                summary: Creates a new expense
+                value:
+                  financialAccountId: 1
+                  categoryId: 1
+                  description: Food
+                  amount: 190.0
+                  date: '2023-12-18T04:09:53.000Z'
+    get:
+      summary: Gets all expense transactions associated to the logged in account
+      tags:
+      - Expenses
+      security:
+      - bearer_auth: []
+      responses:
+        '200':
+          description: expense transactions returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/expense_transaction"
+  "/expenses/{id}":
+    get:
+      summary: Gets the details of an expense transaction
+      tags:
+      - Expenses
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      security:
+      - bearer_auth: []
+      responses:
+        '200':
+          description: expense transaction returned
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/expense_transaction"
+        '404':
+          description: expense not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/resource_not_found_error"
+    put:
+      summary: Updates an expense transaction
+      tags:
+      - Expenses
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      security:
+      - bearer_auth: []
+      responses:
+        '200':
+          description: expense updated
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/expense_transaction"
+        '404':
+          description: expense not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/resource_not_found_error"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/update_expense_params"
+    delete:
+      summary: deletes a expense
+      tags:
+      - Expenses
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      security:
+      - bearer_auth: []
+      responses:
+        '204':
+          description: expense deleted
+        '404':
+          description: expense not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/resource_not_found_error"
   "/financial_accounts":
     post:
       summary: Creates a new financial account
@@ -629,7 +762,7 @@ components:
       properties:
         name:
           type: string
-        amount:
+        initialAmount:
           type: number
           format: double
         description:
@@ -640,9 +773,9 @@ components:
       - "$ref": "#/components/schemas/base_financial_account"
       required:
       - name
-      - amount
+      - initialAmount
     financial_account:
-      allOf:
+      "$merge":
       - "$ref": "#/components/schemas/base_financial_account"
       - type: object
         properties:
@@ -662,7 +795,7 @@ components:
       - name
       - categoryType
     category:
-      allOf:
+      "$merge":
       - "$ref": "#/components/schemas/base_category"
       - type: object
         properties:
@@ -680,50 +813,78 @@ components:
           type: string
           nullable: true
     expense_transaction:
-      allOf:
+      "$merge":
       - "$ref": "#/components/schemas/base_transaction"
       - type: object
         properties:
-          type:
+          transactionType:
             type: string
-            enum:
-            - expense
           financialAccount:
             "$ref": "#/components/schemas/financial_account"
+          category:
+            "$ref": "#/components/schemas/category"
+          id:
+            type: integer
     income_transaction:
-      allOf:
+      "$merge":
       - "$ref": "#/components/schemas/base_transaction"
       - type: object
         properties:
-          type:
+          transactionType:
             type: string
-            enum:
-            - income
           financialAccount:
             "$ref": "#/components/schemas/financial_account"
+          category:
+            "$ref": "#/components/schemas/category"
+          id:
+            type: integer
     transfer_transaction:
-      allOf:
+      "$merge":
       - "$ref": "#/components/schemas/base_transaction"
       - type: object
         properties:
-          type:
+          transactionType:
             type: string
-            enum:
-            - transfer
           fromFinancialAccount:
             "$ref": "#/components/schemas/financial_account"
           toFinancialAccount:
             "$ref": "#/components/schemas/financial_account"
+          id:
+            type: integer
     transaction:
-      anyOf:
+      oneOf:
       - "$ref": "#/components/schemas/expense_transaction"
       - "$ref": "#/components/schemas/income_transaction"
       - "$ref": "#/components/schemas/transfer_transaction"
-      discriminator: type
-      mapping:
-        expense: "#/components/schemas/expense_transaction"
-        income: "#/components/schemas/income_transaction"
-        transfer: "#/components/schemas/transfer_transaction"
+      discriminator:
+        propertyName: transactionType
+        mapping:
+          expense: "#/components/schemas/expense_transaction"
+          income: "#/components/schemas/income_transaction"
+          transfer: "#/components/schemas/transfer_transaction"
+    create_expense_params:
+      "$merge":
+      - "$ref": "#/components/schemas/base_transaction"
+      - type: object
+        properties:
+          financialAccountId:
+            type: integer
+          categoryId:
+            type: integer
+      required:
+      - financialAccountId
+      - categoryId
+      - amount
+      - date
+    update_expense_params:
+      "$merge":
+      - "$ref": "#/components/schemas/base_transaction"
+      - type: object
+        properties:
+          financialAccountId:
+            type: integer
+          categoryId:
+            type: integer
 servers:
 - url: "{url}"
   variables:
